--- a/views/loginPage.pug
+++ b/views/loginPage.pug
@@ -5,11 +5,11 @@ html(lang='en')
     title Inquire - Login
     link(rel="stylesheet", href="/styles/login.css")
   body
-    #container.flex-column
+    #container
       .quotation
         .quote Inquire helps you to learn and share your 
         .quote programming knowledge as well as clear your doubts.
-      .box.flex-column
+      .box
         .legend Inquire
         button(onclick="(window.location.href='/login')") Login With Github
         button(onclick="(window.location.href='/')") Continue Without Login
