--- a/views/questions.pug
+++ b/views/questions.pug
@@ -1,19 +1,19 @@
 mixin getQuestions(header)
   script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript")
   .container
-    .container-h.flex-row
+    .container-h
       .con-header-title=header
       if userInfo
         button.askBtn(onClick="window.location.href='/askQuestion'") Ask Question
-    .container-b.flex-column
+    .container-b
       if(questions.length > 0)
         each question in questions
           -const {id,ownerId,title,body,receivedAt,username,ansCount,isAnsAccepted,tags} = question
-          .question.flex-row
+          .question
             -const isAnyAnsAccepted = isAnsAccepted.some(a=>a.isAnsAccepted);
             -let className = ansCount ? "countName-a":"countName"
             -className = isAnyAnsAccepted ? "countName-ac" : className
-            .flex-column(class=className)
+            div(class=className)
               .count=ansCount || 0
                 .ansCount answers
             .question-details
