--- a/views/yourTags.pug
+++ b/views/yourTags.pug
@@ -12,7 +12,7 @@ html(lang='en')
     include titleBar
     include menuBar
     .container
-      .container-h.flex-row
+      .container-h
         .con-header-title='Your Tags'
       .container-b
         .tags
