--- a/sass/defaultConfig.sass
+++ b/sass/defaultConfig.sass
@@ -14,6 +14,14 @@ $red: #ff3131
   font-family: Helvetica, sans-serif
   word-break: break-word
 
+@mixin flex-row
+  display: flex
+  flex-direction: row
+
+@mixin flex-column
+  display: flex
+  flex-direction: column
+
 @mixin editor-box  
   align-self: center 
   text-align: left 
@@ -39,5 +47,4 @@ $red: #ff3131
 @mixin formFooter-hover
   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66) 
   cursor: pointer 
-  
   
