--- a/views/titleBar.pug
+++ b/views/titleBar.pug
@@ -3,15 +3,15 @@ script.
     const popup = document.querySelector('.popUp-text');
     popup.classList.toggle('show');
   }
-.titleBar.flex-row
+.titleBar
   .logo(onClick="window.location.href='/'") Inquire
-  .userInfo.flex-row
+  .userInfo
     if userInfo
       -const {id,username,avatar} = userInfo
       .userName=username
       .avatar
         img( src=`${avatar}`, alt="alt" onclick="toggleShow()" )
-        span.popUp-text.flex-column
+        span.popUp-text
           button.profile-options(onClick=`window.location.href='/viewProfile?id=${id}'`) ViewProfile
           button.profile-options.margin-auto(onClick="window.location.href='/cancel'") Logout
     else
