|#18|Ragini/Rivu| fixed script for pages, fixed edit-btns css

--- a/sass/postComment.sass
+++ b/sass/postComment.sass
@@ -27,3 +27,7 @@
   outline: none 
   border: none 
   border-bottom: solid 1px $black-light
+
+.popUpExt 
+  margin-right: auto
+  align-self: baseline !important
