|#18|Ragini/Rivu| added formatAnswer for formatting answer when load to editor, fixed the oragen color, change highlightdownarrow color

--- a/sass/questionPage.sass
+++ b/sass/questionPage.sass
@@ -82,7 +82,7 @@
 
 .answers > span, .comments > span
   font-size: 20px 
-  color: #f48024 
+  color: $orange 
 
 .answer-author 
   justify-content: flex-end 
@@ -123,13 +123,13 @@
   width: 82% 
   justify-content: space-between 
   margin-left: 2vw 
-  color: #f48024 
+  color: $orange 
 
 .border 
   border-bottom:1px dashed $black-light 
 
 .edit-q-btn 
-  color: #f48024 
+  color: $orange 
   font-size: large 
   margin-top: 2vh 
   margin-left: 3vw 
